# pyo3-project-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyo3_project_template.pyi  pyproject.toml
.github/workflows/: CI.yml
pyo3_project_template/: __init__.py  native.py
src/: lib.rs
