[tool.poetry]
name = "pyo3-project-template"
version = "0.1.0"
description = "Template for PyO3 projects."
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/gabriel-milan/pyo3-project-template"
repository = "https://github.com/gabriel-milan/pyo3-project-template"
keywords = ["python", "template", "pyo3", "rust"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"
maturin = ">=0.13,<0.14"

[tool.black]
line-length = 100
target-version = ["py39"]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
